Bug 286632 - presence in the contact list can be changed by playing with the sound level in amarok
Summary: presence in the contact list can be changed by playing with the sound level i...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-14 22:07 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-11-14 22:07:26 UTC
Version:           git-latest (using Devel) 
OS:                Linux

start the contact list and set the presence to anything else than available.
now with amarok playing change the volume via the mouse wheel. the presence changes to available.

Alin

Reproducible: Didn't try

Steps to Reproduce:
...

Actual Results:  
...

Expected Results:  
...

OS: Linux (x86_64) release 3.1.0-2-desktop
Compiler: gcc..
Comment 1 Martin Klapetek 2011-11-15 13:07:07 UTC
Git commit 8af0754bcd8b8521445e7f562c3c4f4e44cf846d by Martin Klapetek.
Committed on 15/11/2011 at 14:05.
Pushed by mklapetek into branch 'master'.

Check for song data only once and don't deactivate the plugin if there are no songs metadata in dbus message

Reviewed-by: David Edmundson
BUG: 286632

M  +0    -20   telepathy-mpris.cpp

http://commits.kde.org/telepathy-kded-module/8af0754bcd8b8521445e7f562c3c4f4e44cf846d