Check for song data only once and don't deactivate the plugin if there are no songs metadata in dbus message

Reviewed-by: David Edmundson
BUG: 286632